--- a/js/libs/appfactoryjs/appfactory.css
+++ b/js/libs/appfactoryjs/appfactory.css
@@ -86,6 +86,35 @@
 }
 
 
+/* TableComponent */
+.uieb-table ,tr td{
+    border:1px solid red
+}
+.uieb-table-tbody {
+    display:block;
+    height:400px;
+    overflow:auto;
+}
+.uieb-table-thead, tbody tr {
+    display:table;
+    width:100%;
+    table-layout:fixed;/* even columns width , fix width of table too*/
+}
+.uieb-table-thead {
+    width: calc( 100% - 1em )/* scrollbar is average 1em/16px width, remove it from thead width */
+}
+.uieb-table {
+    /*width:400px;*/
+}
+
+
+.uieb-table-cell {
+  overflow: hidden;
+}
+.uieb-table-cell:hover {
+  overflow-x: scroll;
+}
+
 
 
 
