--- a/libs/scripts/appfactoryjs/appfactory.css
+++ b/libs/scripts/appfactoryjs/appfactory.css
@@ -4,13 +4,13 @@
   width: 200px; 
   position: fixed;
   z-index: 1;
-  top: 0;
+  top: 0; 
   left: 0;
   background-color: #111;
   overflow-x: hidden;
   padding-top: 20px;
   transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
-}
+} 
 
 /* Style the sidenav links and the dropdown button */
 .appfac_sidenav a, .dropdown-btn {
@@ -266,6 +266,7 @@
 
 
 /* TableComponent */
+/*
 .uieb-table ,tr td{
     border:1px solid red
 }
@@ -277,14 +278,12 @@
 .uieb-table-thead, tbody tr {
     display:table;
     width:100%;
-    table-layout:fixed;/* even columns width , fix width of table too*/
+    table-layout:fixed;/ even columns width , fix width of table too/
 }
 .uieb-table-thead {
-    width: calc( 100% - 1em )/* scrollbar is average 1em/16px width, remove it from thead width */
+    width: calc( 100% - 1em )/ scrollbar is average 1em/16px width, remove it from thead width /
 }
-.uieb-table {
-    /*width:400px;*/
-}
+
 
 
 .uieb-table-cell {
@@ -295,135 +294,135 @@
 }
 
 
-
+*/
 
 
 
 
 #loader-wrapper {
-	position: fixed;
-/*	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;*/
-	z-index: 1000;
+  position: fixed;
+/*  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;*/
+  z-index: 1000;
 }
 #loader {
-	display: block;
-	position: relative;
-	left: 50%;
-	top: 50%;
-	width: 50px;
-	height: 50px;
-	margin: -25px 0 0 -25px;
-	border: 1px red solid;
+  display: block;
+  position: relative;
+  left: 50%;
+  top: 50%;
+  width: 50px;
+  height: 50px;
+  margin: -25px 0 0 -25px;
+  border: 1px red solid;
 }
 #loader:before {
-	content: "";
-	position: absolute;
-	top:5px;
-	left: 5px;
-	right: 5px;
-	bottom: 5px;
+  content: "";
+  position: absolute;
+  top:5px;
+  left: 5px;
+  right: 5px;
+  bottom: 5px;
 
-	border: 3px solid #e74c3c;
+  border: 3px solid #e74c3c;
 }
 #loader:after {
-	content: "";
-	position: absolute;
-	top:5px;
-	left: 15px;
-	right: 15px;
-	bottom:15px;
+  content: "";
+  position: absolute;
+  top:5px;
+  left: 15px;
+  right: 15px;
+  bottom:15px;
 
-	border: 3px solid #f9c922;
+  border: 3px solid #f9c922;
 }
 
 
 
 
 .appfactory-container-loader {
-	display: block; 
-    	position: relative;
-    	z-index: 1000;
-    	width: 100%;
-    	height: 100%;
+  display: block; 
+      position: relative;
+      z-index: 1000;
+      width: 100%;
+      height: 100%;
      background-color: black;
      opacity: 0.5;
 }
 .appfactory-container-loader-spinner {
-	display: block;
-	position: relative;
-	left: 50%;
-	top: 50%;
-	width: 50px;
-	height: 50px;
-	margin: -25px 0 0 -25px;
-	/*border: 3px red solid;*/
-	border-radius: 50%;
-	border: 1px solid transparent;
-    	border-top-color: #3498db;
+  display: block;
+  position: relative;
+  left: 50%;
+  top: 50%;
+  width: 50px;
+  height: 50px;
+  margin: -25px 0 0 -25px;
+  /*border: 3px red solid;*/
+  border-radius: 50%;
+  border: 1px solid transparent;
+      border-top-color: #3498db;
 
-    	-webkit-animation: spin 1.5s infinite; /* Chrome, Opera 15+, Safari 5+ */
+      -webkit-animation: spin 1.5s infinite; /* Chrome, Opera 15+, Safari 5+ */
           animation: spin 1.5s infinite; /* Chrome, Firefox 16+, IE 10+, Opera */
 
 }
 .appfactory-container-loader-spinner:before {
-	content: "";
-	position: absolute;
-	top:5px;
-	left: 5px;
-	right: 5px;
-	bottom: 5px;
+  content: "";
+  position: absolute;
+  top:5px;
+  left: 5px;
+  right: 5px;
+  bottom: 5px;
 
 
-	border-radius: 50%;
-	border: 1px solid transparent;
-    	border-top-color: #e74c3c;
+  border-radius: 50%;
+  border: 1px solid transparent;
+      border-top-color: #e74c3c;
 
-    	-webkit-animation: spin 1.5s infinite; /* Chrome, Opera 15+, Safari 5+ */
+      -webkit-animation: spin 1.5s infinite; /* Chrome, Opera 15+, Safari 5+ */
           animation: spin 1.5s infinite; /* Chrome, Firefox 16+, IE 10+, Opera */
 }
 .appfactory-container-loader-spinner:after {
-	content: "";
-	position: absolute;
-	top: 10px;
-	left: 10px;
-	right: 10px;
-	bottom: 10px;
-	border-radius: 50%;
-	border: 1px solid transparent;
-    	border-top-color: #f9c922;
+  content: "";
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
+  border-radius: 50%;
+  border: 1px solid transparent;
+      border-top-color: #f9c922;
 
-    	-webkit-animation: spin 1.5s infinite; /* Chrome, Opera 15+, Safari 5+ */
+      -webkit-animation: spin 1.5s infinite; /* Chrome, Opera 15+, Safari 5+ */
           animation: spin 1.5s infinite; /* Chrome, Firefox 16+, IE 10+, Opera */
 }
 
 @-webkit-keyframes spin {
   0%   { 
-  	.box_rotate {
-		  -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
-		      -ms-transform: rotate(0deg);  /* IE 9 */
-		          transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
-		}
+    .box_rotate {
+      -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+          -ms-transform: rotate(0deg);  /* IE 9 */
+              transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
+    }
   }
   100% { 
-		 -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
-      	-ms-transform: rotate(360deg);  /* IE 9 */
+     -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+        -ms-transform: rotate(360deg);  /* IE 9 */
           transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
   }
 }
 @keyframes spin {
   0%   { 
-  	.box_rotate {
-		  -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
-		      -ms-transform: rotate(0deg);  /* IE 9 */
-		          transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
-		}
+    .box_rotate {
+      -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+          -ms-transform: rotate(0deg);  /* IE 9 */
+              transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
+    }
   }
   100% { 
-		 -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
-      	-ms-transform: rotate(360deg);  /* IE 9 */
+     -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+        -ms-transform: rotate(360deg);  /* IE 9 */
           transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
   }
 }
@@ -1102,19 +1101,6 @@ width: 9.6rem; */
     bottom: -1000px;
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
